--- a/pages/home-user.html
+++ b/pages/home-user.html
@@ -117,24 +117,26 @@
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
+        <a href="busca-filtragem-privada.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+        </a>
       </div>
+    </div>
 
-      <nav class="menu d-flex">
-        <ul class="menu-list d-flex justify-content-between align-items-center">
-          <li class="menu-item"><a href="home-user.html">Inicio</a></li>
-          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
-          <li class="menu-item"><a href="doar.html">Doar</a></li>
-          <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
-                alt="Foto de perfil" width="30px"></a></li>
-          <li class="carrinho">
-            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
-              <i class="bi bi-cart4"></i>
-            </a>
-          </li>
-        </ul>
-      </nav>
+    <nav class="menu d-flex">
+      <ul class="menu-list d-flex justify-content-between align-items-center">
+        <li class="menu-item"><a href="home-user.html">Inicio</a></li>
+        <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+        <li class="menu-item"><a href="doar.html">Doar</a></li>
+        <li class="menu-item login"><a href="perfil-user.html"><img src="../assets/foto-perfil-exemplo.png"
+              alt="Foto de perfil" width="30px"></a></li>
+        <li class="carrinho">
+          <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+            <i class="bi bi-cart4"></i>
+          </a>
+        </li>
+      </ul>
+    </nav>
     </div>
   </header>
 
