--- a/pages/index.html
+++ b/pages/index.html
@@ -102,7 +102,6 @@
     .carousel .wish-icon .fa-heart {
       color: #ff6161;
     }
-
   </style>
   <script>
   </script>
@@ -118,8 +117,10 @@
 
       <div class="input-group mb-3 w-50">
         <input type="text" class="form-control input-search" placeholder="Buscar...">
-        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
-        </div>
+        <a href="busca-filtragem-public.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
       </div>
 
       <nav class="menu d-flex">
@@ -195,14 +196,15 @@
 
           <!-- Wrapper for carousel items -->
           <div class="carousel-inner">
-                
+
             <div class="item carousel-item active">
               <div class="row">
                 <div class="col-sm-3">
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -215,7 +217,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -228,7 +231,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -241,7 +245,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/529638.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -258,7 +263,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -271,7 +277,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -284,7 +291,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -297,7 +305,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-anuncio-public+.html"><img src="../assets/salto-1.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -329,14 +338,15 @@
 
           <!-- Wrapper for carousel items -->
           <div class="carousel-inner">
-                
+
             <div class="item carousel-item active">
               <div class="row">
                 <div class="col-sm-3">
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -349,7 +359,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -362,7 +373,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -375,7 +387,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-2.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -392,7 +405,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -405,7 +419,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -418,7 +433,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -431,7 +447,8 @@
                   <div class="thumb-wrapper">
                     <span class="wish-icon"><i class="bi bi-heart"></i></span>
                     <div class="img-box">
-                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid" alt="Foto Sapato"></a>
+                      <a href="produto-doador-public+.html"><img src="../assets/salto-3.png" class="img-fluid"
+                          alt="Foto Sapato"></a>
                     </div>
                     <div class="thumb-content">
                       <h4>Sapato teste</h4>
@@ -461,8 +478,7 @@
       <div class="row g-0 mx-lg-0">
         <div class="col-lg-6 ps-lg-0" style="min-height: 400px;">
           <div class="position-relative h-100">
-            <img class="position-absolute img-fluid w-100 h-100"
-              src="../assets/imagem-vendedor-sapato.png"
+            <img class="position-absolute img-fluid w-100 h-100" src="../assets/imagem-vendedor-sapato.png"
               style="object-fit: cover;" alt="">
           </div>
         </div>
