--- a/pages/chat-doacao.html
+++ b/pages/chat-doacao.html
@@ -1,26 +1,96 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat de doação</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../styles/arthur.css">
+  <link rel="stylesheet" href="../styles/erick.css">
+  <link rel="stylesheet" href="../styles/yago.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title> Chat de Doações</title>
 </head>
 
 <body>
-    <h1 title="Chat de doação">Chat de doação</h1><hr>
-    <a href="home-user.html">Home User</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="meu-carrinho.html">Meu Carrinho Privado</a><br>
-    <a href="perfil-user.html">Perfil do Usuário</a><hr>
 
-    <a href="anuncios.html">Meus anúncios</a><br>
-    <a href="compras.html">Compras</a><br>
-    <a href="doacoes-atualizadas.html">Doações</a><hr>
-    <p>Chat de doação</p>
-        
+
+  <!-- Header -->
+  <header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
+
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+        </div>
+      </div>
+
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="login.html">Login</a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <nav class="nav nav-pills nav-justified mt-3 mb-3"> <a class="nav-link" href="./chat-anuncios.html">Meus Anúncios</a> <a
+      class="nav-link" href="./chat-compras.html">Compras</a> <a class="nav-link active"
+      href="./chat-doacao.html">Doações</a> </nav>
+
+
+
+
+  <div class="d-flex container justify-content-around">
+    <div class="w-25 p- border border-dark" style="align-items: center;">
+
+
+      <div class="caixa">TITULO PRODUTO <img src="../assets/88042.png" width="70px" alt=""></div>
+      <br>
+      <div class="caixa">TITULO PRODUTO <img src="../assets/88042.png" width="70px" alt=""></div>
+      <br>
+      <div class="caixa">TITULO PRODUTO <img src="../assets/88042.png" width="70px" alt=""> </div>
+
+
+    </div>
+    <div class="w-75 p-3 border border-dark">
+
+      <form>
+        <div class="chat-container ">
+          <div class="message sender">
+            <span class="name">Você:</span>
+            <div class="content">
+              Gostaria de fazer uma doação
+            </div>
+          </div>
+          <div class="message">
+            <span class="name">Atendente:</span>
+            <div class="content">
+              Olá! Como posso ajudar?
+            </div>
+          </div>
+
+          <div class="input-container">
+            <input type="text" placeholder="MANDE UMA MENSAGEM ">
+            <button id="enviarBtn"><img src="../assets/mandar.png" alt="Image" width="35px"></button>
+          </div>
+        </div>
+
+    </div>
+
+    </main>
+  </div>
+
 </body>
-
-</html>
