--- a/pages/meu-carrinho-public.html
+++ b/pages/meu-carrinho-public.html
@@ -1,20 +1,162 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Carrinho Public</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="Icon" type="image/png" href="../assets/pe-amigo.png">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="../styles/marquim.css">
+<link rel="stylesheet" href="../styles/erick.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+<title>Login</title>
 </head>
+
 <body>
-    <h1 title="Meu Carrinho Public">Meu Carrinho Public</h1><hr>
-    <a href="home-public.html">Home Public</a><br>
-    <a href="adquirir.html">Adquirir</a><br>
-    <a href="doar.html">Doar</a><br>
-    <a href="login.html">Login</a><br>
-    <a href="meu-carrinho-public.html">Meu Carrinho Public</a><hr>
+<!-- Header -->
+<header class="header">
+    <div class="container d-flex justify-content-between align-items-center">
+      <div class="logo">
+        <a href="index.html"><img class="logo-img" src="../assets/pe-amigo.png" alt="Logo"></a>
+      </div>
 
-    <a href="efetuar-compra.html">Avançar</a>
+      <div class="input-group mb-3 w-50">
+        <input type="text" class="form-control input-search" placeholder="Buscar...">
+        <a href="busca-filtragem-public.html">
+          <div class="input-group-append"><button class="btn btn-primary"><i class="bi bi-search"></i></button>
+          </div>
+        </a>
+      </div>
 
+      <nav class="menu d-flex">
+        <ul class="menu-list d-flex justify-content-between align-items-center">
+          <li class="menu-item"><a href="index.html">Inicio</a></li>
+          <li class="menu-item"><a href="adquirir.html">Adquirir</a></li>
+          <li class="menu-item"><a href="doar.html">Doar</a></li>
+          <li class="menu-item login"><a href="login.html">Login</a></li>
+          <li class="carrinho">
+            <a href="meu-carrinho-public.html" target="_blank" rel="noopener noreferrer">
+              <i class="bi bi-cart4"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+<main>
+
+    <div class="page-title">Seu Carrinho</div>
+    <div class="content">
+      <section>
+        <table>
+          <thead>
+            <tr>
+              <th>Produto</th>
+              <th>Preço</th>
+              <th>Quantidade</th>
+              <th>Total</th>
+              <th>-</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <div class="product">
+                  <img src="https://picsum.photos/100/120" alt="" />
+                  <div class="info">
+                    <div class="name">Nome do produto</div>
+                    <div class="category">Categoria</div>
+                  </div>
+                </div>
+              </td>
+              <td>R$ 120</td>
+              <td>
+                <div class="qty">
+                  <button><i class="bx bx-minus"></i></button>
+                  <span>2</span>
+                  <button><i class="bx bx-plus"></i></button>
+                </div>
+              </td>
+              <td>R$ 240</td>
+              <td>
+                <button class="remove"><i class="bx bx-x"></i></button>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="product">
+                  <img src="https://picsum.photos/100/120" alt="" />
+                  <div class="info">
+                    <div class="name">Nome do produto</div>
+                    <div class="category">Categoria</div>
+                  </div>
+                </div>
+              </td>
+              <td>R$ 120</td>
+              <td>
+                <div class="qty">
+                  <button><i class="bx bx-minus"></i></button>
+                  <span>2</span>
+                  <button><i class="bx bx-plus"></i></button>
+                </div>
+              </td>
+              <td>R$ 240</td>
+              <td>
+                <button class="remove"><i class="bx bx-x"></i></button>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <div class="product">
+                  <img src="https://picsum.photos/100/120" alt="" />
+                  <div class="info">
+                    <div class="name">Nome do produto</div>
+                    <div class="category">Categoria</div>
+                  </div>
+                </div>
+              </td>
+              <td>R$ 120</td>
+              <td>
+                <div class="qty">
+                  <button><i class="bx bx-minus"></i></button>
+                  <span>2</span>
+                  <button><i class="bx bx-plus"></i></button>
+                </div>
+              </td>
+              <td>R$ 240</td>
+              <td>
+                <button class="remove"><i class="bx bx-x"></i></button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+      <aside>
+        <div class="box">
+          <header>Resumo da compra</header>
+          <div class="info">
+            <div><span>Sub-total</span><span>R$ 418</span></div>
+            <div><span>Frete</span><span>Gratuito</span></div>
+            <div>
+              <button>
+                Adicionar cupom de desconto
+                <i class="bx bx-right-arrow-alt"></i>
+              </button>
+            </div>
+          </div>
+          <footer>
+            <span>Total</span>
+            <span>R$ 418</span>
+          </footer>
+        </div>
+        <a href="login.html" class="float-end btn btn-primary m-3">Finalizar compra</a>
+      </aside>
+    </div>
+</main>
+      
 </body>
+
 </html>
