--- a/pages/doar.html
+++ b/pages/doar.html
@@ -75,21 +75,21 @@
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1"
                         value="option1">
-                    <label class="form-check-label" for="inlineRadio1"><img src="../assets/pe-esquerdo.jpg"
+                    <label class="form-check-label" for="inlineRadio1"><img src="../assets/pe-esquerdo.png"
                             alt="Pe esquerdo" class="img-fluid rounded mx-auto d-block" width="120px"
                             height="auto"></label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2"
                         value="option2">
-                    <label class="form-check-label" for="inlineRadio2"><img src="../assets/pe-direito.jpg"
+                    <label class="form-check-label" for="inlineRadio2"><img src="../assets/pe-direito.png"
                             alt="Pe direito" class="img-fluid rounded mx-auto d-block" width="120px"
                             height="auto"></label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3"
                         value="option3">
-                    <label class="form-check-label" for="inlineRadio3"><img src="../assets/pe-esquerdo-direito.jpg"
+                    <label class="form-check-label" for="inlineRadio3"><img src="../assets/pe-esquerdo-direito.png"
                             alt="Pe esquerdo e direito" class="img-fluid rounded mx-auto d-block" width="120px"
                             height="auto"></label>
                 </div>
