--- a/pages/adquirir.html
+++ b/pages/adquirir.html
@@ -85,21 +85,21 @@
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioE"
                         value="option1">
-                    <label class="form-check-label" for="inlineRadioE"><img src="../assets/pe-esquerdo.jpg"
+                    <label class="form-check-label" for="inlineRadioE"><img src="../assets/pe-esquerdo.png"
                             alt="Pe esquerdo" class="img-fluid rounded mx-auto d-block" width="120px"
                             height="auto"></label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioD"
                         value="option2">
-                    <label class="form-check-label" for="inlineRadioD"><img src="../assets/pe-direito.jpg"
+                    <label class="form-check-label" for="inlineRadioD"><img src="../assets/pe-direito.png"
                             alt="Pe direito" class="img-fluid rounded mx-auto d-block" width="120px"
                             height="auto"></label>
                 </div>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadioED"
                         value="option3">
-                    <label class="form-check-label" for="inlineRadioED"><img src="../assets/pe-esquerdo-direito.jpg"
+                    <label class="form-check-label" for="inlineRadioED"><img src="../assets/pe-esquerdo-direito.png"
                             alt="Pe esquerdo e direito" class="img-fluid rounded mx-auto d-block" width="120px"
                             height="auto"></label>
                 </div>
